add: R4-5-6 (token & loginAttemps) and fix bugs (always)

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [Repository]
 ; 1.25
-url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
+; url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
 ; revoir : rabbitmq non relié ...
 ; 4.21
 ; url = https://github.com/callistaenterprise/blog-microservices
@@ -15,9 +15,9 @@ url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
 ; 57.32s
 ; url = https://github.com/ewolff/microservice-kafka
 ; 10.17s
+; pb with parsing ...
 ; url = https://github.com/anilallewar/microservices-basics-spring-boot
 ; 31.86s
-; NO PNG -> DFD image ...
 ; url = https://github.com/mudigal-technologies/microservices-sample
 ; 19.51s
 ; NO PNG -> DFD image ...
@@ -35,7 +35,7 @@ url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
 ; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
 ; pb with dockercompose file
 ; très long -> 178.3s
-; url = https://github.com/spring-petclinic/spring-petclinic-microservices
+url = https://github.com/spring-petclinic/spring-petclinic-microservices
 ; service name replace "" par "-" 
 ; 1.65s
 ; url = https://github.com/shabbirdwd53/springboot-microservice
