--- a/config/config_v2.ini
+++ b/config/config_v2.ini
@@ -2,7 +2,7 @@
 ; Analysable
 ; SPRING BOOT
 ; ok
-url = https://github.com/WendellAdriel/spring-microservices
+; url = https://github.com/WendellAdriel/spring-microservices
 ; url = https://github.com/527515025/springBoot.git
 ; KKKKO
 ; url = https://github.com/ityouknow/awesome-spring-boot.git
@@ -38,7 +38,7 @@ url = https://github.com/WendellAdriel/spring-microservices
 ; url = https://github.com/aksadvanced/spring-microservices.git
 ; url = https://github.com/koushikkothagal/spring-boot-microservices.git
 ; url = https://github.com/pravsingh/springboot-dockerized.git
-; url = https://github.com/SayedBaladoh/Microservices-Sample-using-SpringBoot-SpringCloud-Eureka-and-Zuul.git
+url = https://github.com/SayedBaladoh/Microservices-Sample-using-SpringBoot-SpringCloud-Eureka-and-Zuul.git
 ; url = https://github.com/Saikiransky/spring-microservices.git
 ; url = https://github.com/kartik1502/Spring-Boot-Microservices-Banking-Application.git
 ; url = https://github.com/CristianCernat/spring-microservices.git
