--- a/config/config_v2.ini
+++ b/config/config_v2.ini
@@ -1,61 +1,119 @@
 [Repository]
-; Analysable
-; SPRING BOOT
-; ok
-; url = https://github.com/WendellAdriel/spring-microservices
-; url = https://github.com/527515025/springBoot.git
-; KKKKO
-; url = https://github.com/ityouknow/awesome-spring-boot.git
-; ok bof?
-; url = https://github.com/lxy-go/SpringBoot.git
-; bof
-; url = https://github.com/apache/dubbo.git
-; bofffff
-; url = https://github.com/apolloconfig/apollo.git
-; bof chelou ...
-; middleware
-; url = https://github.com/alibaba/spring-cloud-alibaba.git
-; framework ? peu de lien...
-; url = https://github.com/alibaba/Sentinel.git
-; url = https://github.com/sqshq/piggymetrics.git
-; bof pas du tout complet ...
-; url = https://github.com/Netflix/conductor.git
-; url = https://github.com/thingsboard/thingsboard.git
 
 ; probably a framework -> énorme
 ; url = https://github.com/apache/camel.git
 
 
-; TESTER :
-; url = https://github.com/microservices-patterns/ftgo-application.git
-; url = https://github.com/zlt2000/microservices-platform.git
-; url = https://github.com/spring-petclinic/spring-petclinic-microservices.git
-; url = https://github.com/callistaenterprise/blog-microservices.git
-; url = https://github.com/sivaprasadreddy/spring-boot-microservices-series.git
-; url = https://github.com/piomin/sample-spring-microservices-new.git
-; url = https://github.com/piomin/sample-spring-microservices.git
-; url = https://github.com/piomin/sample-spring-cloud-microservices-future.git
+
+; OK
+; url = https://github.com/alejandro-du/vaadin-microservices-demo.git
+; url = https://github.com/WendellAdriel/spring-microservices
+url = https://github.com/Saikiransky/spring-microservices.git
+; url = https://github.com/kartik1502/Spring-Boot-Microservices-Banking-Application.git
+; url = https://github.com/sneakylock/spring-boot-microservices.git
 ; url = https://github.com/aksadvanced/spring-microservices.git
 ; url = https://github.com/koushikkothagal/spring-boot-microservices.git
-; url = https://github.com/pravsingh/springboot-dockerized.git
-url = https://github.com/SayedBaladoh/Microservices-Sample-using-SpringBoot-SpringCloud-Eureka-and-Zuul.git
-; url = https://github.com/Saikiransky/spring-microservices.git
-; url = https://github.com/kartik1502/Spring-Boot-Microservices-Banking-Application.git
-; url = https://github.com/CristianCernat/spring-microservices.git
-; url = https://github.com/sneakylock/spring-boot-microservices.git
+; url = https://github.com/SayedBaladoh/Microservices-Sample-using-SpringBoot-SpringCloud-Eureka-and-Zuul.git
+; url = https://github.com/callistaenterprise/blog-microservices.git
+; url = https://github.com/piomin/sample-spring-microservices-new.git
+; url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
+; url = https://github.com/blaugmail/clone-sample-spring-oauth2-microservices
+; url = https://github.com/apssouza22/java-microservice
+; url = https://github.com/ewolff/microservice
+; url = https://github.com/anilallewar/microservices-basics-spring-boot
+; url = https://github.com/rohitghatol/spring-boot-microservices
+; url = https://github.com/koushikkothagal/spring-boot-microservices-workshop
+; url = https://github.com/mdeket/spring-cloud-movie-recommendation
+; url = https://github.com/yidongnan/spring-cloud-netflix-example
+; url = https://github.com/shabbirdwd53/springboot-microservice
+; url = https://github.com/jferrater/tap-and-eat-microservices
+
+; ANALYSE LONGUE
+; 19.51s
+; url = https://github.com/sqshq/piggymetrics
+; 31.86s
+; url = https://github.com/mudigal-technologies/microservices-sample
+; 57.32s
+; url = https://github.com/ewolff/microservice-kafka
+; 92s
+; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
+; 178.3s
+; url = https://github.com/spring-petclinic/spring-petclinic-microservices
+
+
+
+; Vérifier :
+; url = https://github.com/eazybytes/event-driven-microservices.git
+; url = https://github.com/TristanPerry/java8-spring-cloud-microservice-demo.git
+; url = https://github.com/Netflix/conductor.git
+; url = https://github.com/mostafacs/ecommerce-microservices-spring-reactive-webflux.git
+; url = https://github.com/thingsboard/thingsboard.git
+; url = https://github.com/microservices-patterns/ftgo-application.git
+; url = https://github.com/sivaprasadreddy/spring-boot-microservices-series.git
+; url = https://github.com/piomin/sample-spring-microservices.git
 ; url = https://github.com/subhashlamba/spring-boot-microservice-example.git
-; url = https://github.com/subhashlamba/spring-boot-microservice-example.git
-; url = https://github.com/BarathArivazhagan/spring-cloud-gateway-routing.git
 ; url = https://github.com/amran-bd/Oauth2Secure-microservices-architecture-apiGateway-springCloud-netflixOSS-PostgreSQL-full-demo.git
 ; url = https://github.com/Mohamed-Hamdy/microservices-ecommerce-system.git
-; url = https://github.com/sqshq/piggymetrics.git
-; url = https://github.com/thingsboard/thingsboard.git
-; url = https://github.com/piggymetrics/piggymetrics.git
 ; url = https://github.com/phunsukbatista/Java-Grocery-Store-Management-Springboot-Microservices-Solution.git
-; url = https://github.com/phunsukbatista/Yaksha-VM-Java-Grocery-Store-Management-Springboot-Microservices-Template.git
-; url = https://github.com/aksadvanced/spring-microservices.git
-; url = https://github.com/koushikkothagal/spring-boot-microservices.git
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+; ############################################################################################################################################################
+; FIXME:
+; schéma architecture
+; url  = https://github.com/sylleryum/kafka-microservices-with-saga.git
+
+; Youtube Java SpringCloud Mikroservis Egitimi Serisi Projesi
+; docker-compose + autre ?
+; architecture
+; FIXME:
+; code2DFD/analysed_repositories/microservice-app/k8s-deployment/microservice-app/templates/deployment.yaml <--
+; Error parsing K8s content: while parsing a flow node
+; expected the node content, but found '-'
+;   in "<unicode string>", line 6, column 7:
+;         {{- include "microservice-app.labe ... 
+;           ^
+; url = https://github.com/HaydiKodlayalim/microservice-app.git
+
+; FIXME:
+; Microservice Architecture with Multiple Languages
+; spring cloud ? docker ? - archi.png
+; url = https://github.com/rodrigorodrigues/microservices-design-patterns.git
+
+; FIXME: pas de lien
+;Deploy MicroProfile based Java microservices on Kubernetes.
+; archi disponible
+; kubernetes
+; url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
+; url = https://github.com/saturnism/istio-by-example-java.git
+; url = https://github.com/DescartesResearch/TeaStore.git
+
+
+; FIXME: pas de liens
+; Monitor logs, metrics, pings, and traces of your distributed (micro-) services. There are also slides walking you through the features of this repository.
+; url = https://github.com/xeraa/microservice-monitoring.git
+
+; FIXME:
+; ERRORORORORRRO
+; url = https://github.com/apolloconfig/apollo.git
 
 
 [Technology Profiles]
